--- a/javescript.html
+++ b/javescript.html
@@ -15,7 +15,7 @@ JavaScript (also known as NodeJS) is a popular language among developers who nee
 
 Owing to its high speed and regular annual updates, JavaScript is an ultimate hit in the IT domain. Reputed firms like Netflix, Uber, PayPal, and several startups use JavaScript to create dynamic web pages that are secure and fast. In fact, the 2018 Developer Skills Report by HackerRank shares that JavaScript is the top programming skill required by companies today. 
 
-                <img src="https://ieeecs-media.computer.org/wp-media/2019/10/30202040/javascript550x4641.jpg" alt="https://ieeecs-media.computer.org/wp-media/2019/10/30202040/javascript550x4641.jpg">
+                <img src="4.jpg" alt="4.jpg">
 
     </body>
 </html>
