--- a/kotlin.html
+++ b/kotlin.html
@@ -13,7 +13,7 @@
 <h3>kotlin:</h3>
 Kotlin is a general-purpose programming language with type inference. It is designed to be completely interoperable with Java. Moreover, from the time Android announced it as its first language, Kotlin offers features that developers ask for. It effortlessly combines object-oriented and functional programming features within it.
 
-        <img src="https://ieeecs-media.computer.org/wp-media/2019/10/30201811/kotlin550x480.jpg" alt="https://ieeecs-media.computer.org/wp-media/2019/10/30201811/kotlin550x480.jpg">
+        <img src="2.jpg" alt="2.jpg">
 
     </body>
 </html>
