--- a/jave.html
+++ b/jave.html
@@ -15,7 +15,7 @@ Java is celebrating its 24th birthday this year and has been one of the most pop
 
 This object-oriented programming language does not require a specific hardware infrastructure, is easily manageable, and has a good level of security. Moreover, it is easier to learn Java in comparison to languages such as C and C++. No wonder, nearly 90 percent of Fortune 500 firms rely on Java for their desktop applications and backend development projects. 
 
-<img src="https://ieeecs-media.computer.org/wp-media/2019/10/30202342/java550x588.jpg" alt="https://ieeecs-media.computer.org/wp-media/2019/10/30202342/java550x588.jpg">
+<img src="3.jpg" alt="3.jpg">
 
 
 
