--- a/javescript.html
+++ b/javescript.html
@@ -5,10 +5,9 @@
         <ul>
   <li><a href="mainpage.html">main page</a></li>
   <li><a href="kotlin.html">kotlin</a></li>
-  <li><a href="file:///C:/Users/MBR/Desktop/project/jave.html">jave</a></li>
-  <li><a href="file:///C:/Users/MBR/Desktop/project/javescript.html">javescript</a></li>
-    <li><a href="https://www.computer.org/publications/tech-news/trends/programming-languages-you-should-learn-in-2020">programming languages updater</a></li>
-
+  <li><a href="jave.html">jave</a></li>
+  <li><a href="javescript.html">javescript</a></li>
+   
 </ul>
 <h3>javescript:</h3>
 JavaScript (also known as NodeJS) is a popular language among developers who need to work on server-side and client-side programming. It is compatible with several other programming languages, allowing you to create animations, set up buttons, and manage multimedia. 
