--- a/mainpage.html
+++ b/mainpage.html
@@ -5,9 +5,9 @@
         <ul>
   <li><a href="mainpage.html">main page</a></li>
   <li><a href="kotlin.html">kotlin</a></li>
-  <li><a href="file:///C:/Users/MBR/Desktop/project/jave.html">jave</a></li>
-  <li><a href="file:///C:/Users/MBR/Desktop/project/javescript.html">javescript</a></li>
-  <li><a href="https://www.computer.org/publications/tech-news/trends/programming-languages-you-should-learn-in-2020">programming languages updater</a></li>
+  <li><a href="jave.html">jave</a></li>
+  <li><a href="javescript.html">javescript</a></li>
+  
 
 </ul>
 <img src="1.jpg" alt="1.jpg">
